==> aabzel/trunk/source/mcal/mcal_at32f4/i2c/i2c_mcal.c <==
#include "i2c_mcal.h"
#include <stdbool.h>
#include <string.h>
#include "array_diag.h"
#include "artery_at32f4xx.h"
#include "byte_utils.h"
#include "data_types.h"
#include "data_utils.h"
#include "debug_info.h"
#include "hal_diag.h"
#include "i2c_fsm.h"
#include "i2c_application.h"
#include "i2c_custom_drv.h"
#include "log.h"
#include "mcal_types.h"
#include "num_to_str.h"
#include "time_mcal.h"
#include "i2c_at32f43x.h"

bool i2c_init_one(uint8_t num) {
    bool res = false;
    LOG_WARNING(I2C, "I2C%u Init", num);

    const I2cConfig_t* Config = I2cGetConfig(num);
    if(Config) {
        I2cHandle_t* Node = I2cGetNode(num);
        if(Node) {
            Node->interrupt_on = Config->interrupt_on;
            memset(&Node->i2c_h, 0, sizeof(i2c_handle_type));
            const I2cInfo_t* Info = I2cGetInfo(num);
            if(Info) {
#ifdef HAS_I2C_FSM
                res = i2c_fsm_init_one_ll(Node);
#endif

#ifdef HAS_AT32F413
                crm_periph_clock_enable(CRM_IOMUX_PERIPH_CLOCK, TRUE);
                gpio_pin_remap_config(I2C1_MUX + 2, TRUE);
#endif
                Node->I2Cx = Info->I2Cx;
                Node->i2c_h.i2cx = Info->I2Cx;
                i2c_reset(Info->I2Cx);
                //  i2c_refresh_txdt_register( &Node->i2c_h);
                // i2c low level init -
                crm_periph_clock_enable(Info->clock_type, TRUE);

                if(Config->interrupt_on) {
                    LOG_WARNING(I2C, "INT EVT:%u,ERR:%u on", Info->irq_evt_n, Info->irq_err_n);

                    nvic_irq_enable(Info->irq_evt_n, 3, 3);
                    nvic_irq_enable(Info->irq_err_n, 3, 3);
                    i2c_interrupt_enable(Node->I2Cx, I2C_ALL_INT, TRUE);
                }
                // i2c_transmit_set(Node->I2Cx, uint16_t address, uint8_t cnt, i2c_reload_stop_mode_type rld_stop,
                // i2c_start_mode_type start);
                I2cClkCtrl_t ClkCtrl;
#ifdef HAS_AT32F43X
                crm_clocks_freq_type clocks_struct = {0};
                crm_clocks_freq_get(&clocks_struct);
                ClkCtrl.qword = 0x40E02C2C; // APB1:50MHz 107.7 kHz 0x40E02C2C Works fine!
                i2c_clkctrl_diag((double)clocks_struct.apb1_freq, ClkCtrl.qword);
                LOG_INFO(I2C, "Reco:I2C_CLKCTRL:0x%08x=%s", ClkCtrl.qword, I2cClkCtrlToStr(&ClkCtrl));
#endif

#ifdef HAS_AT32F413
                ClkCtrl.qword = 100000; // APB1:50MHz 107.7 kHz 0x40E02C2C Works fine!
#endif
                // ClkCtrl.qword = I2cCalcArteryClkCtrlQword((double)Config->clock_speed,
                // (double)clocks_struct.apb1_freq);

                i2c_init(Node->I2Cx, 0x0F, ClkCtrl.qword);
                i2c_own_address1_set(Node->I2Cx, I2C_ADDRESS_MODE_7BIT, Config->own_addr);
#ifdef HAS_AT32F43X
                // i2c_addr10_mode_enable(Node->I2Cx, FALSE);
                // i2c_addr10_header_enable(Node->I2Cx, FALSE);
#endif // HAS_AT32F43X

#ifdef HAS_AT32F413X
                uint8_t rx_byte = i2c_data_receive(Node->I2Cx);
                LOG_DEBUG(I2C, "DT:0x%02x", rx_byte);
                i2c_master_receive_ack_set(Node->I2Cx, I2C_MASTER_ACK_NEXT);
                i2c_ack_enable(Node->I2Cx, TRUE);
                i2c_start_done_clear(Node);
#endif
                i2c_enable(Node->I2Cx, TRUE);
#ifdef HAS_AT32F43X
                res = i2c_clear_events(Node);
#endif // HAS_AT32F43X
                Node->init_done = true;
            } else {
                LOG_ERROR(I2C, "NoInfo");
            }
            /* reset i2c peripheral */
        } else {
            LOG_ERROR(I2C, "NoNode");
        }
    } else {
        LOG_DEBUG(I2C, "NoConfig");
    }

    /* i2c peripheral enable */
    return res;
}

bool i2c_api_write(uint8_t num, uint8_t chip_addr, const uint8_t* const array, size_t size) {
    bool res = false;
    I2cHandle_t* Node = I2cGetNode(num);
    if(Node) {
        i2c_interrupt_enable(Node->I2Cx, I2C_ALL_INT, TRUE);
        uint8_t wr_addr = i2c_compose_write_address(chip_addr);
#ifdef HAS_ARRAY_DIAG
        LOG_DEBUG(I2C, "I2C%u,Write,Data,Chip:0x%02x,Data:0x%s", num, wr_addr, ArrayToStr(array, 2));
#endif // HAS_ARRAY_DIAG
        Node->ack_fail = false;
        i2c_status_type ret =
            i2c_master_transmit_int(&Node->i2c_h, wr_addr, array, (uint16_t)size, I2C_SEND_TIME_OUT_MS);
        if(I2C_OK == ret) {
            res = true;
#if 0
            ret = i2c_wait_end(&Node->i2c_h, I2C_SEND_TIME_OUT_MS);
            if(I2C_OK == ret) {
                if(Node->ack_fail) {
                    res = false;
                } else {
                    res = true;
                }
            } else {
                LOG_ERROR(I2C, "Tx,TimeOut,Err,Ret:%u=%s", ret, I2cErrToStr(ret));
                res = false;
            }
#endif

        } else {
            LOG_ERROR(I2C, "Tx,Err,Ret:%u=%s,TO:%u", ret, I2cErrToStr(ret), I2C_SEND_TIME_OUT_MS);
            res = false;
        }
    }

    return res;
}

bool i2c_api_read(uint8_t num, uint8_t chip_addr, uint8_t* data, uint32_t size) {
    bool res = false;
    I2cHandle_t* Node = I2cGetNode(num);
    if(Node) {
        Node->ack_fail = false;
        i2c_status_type ret;
        ret = i2c_master_receive_int(&Node->i2c_h, chip_addr, data, (uint16_t)size, I2C_READ_TIME_OUT_MS);
        if(I2C_OK == ret) {
            res = true;
        } else {
            LOG_ERROR(I2C, "I2cTxErrRet:%u=%s", ret, I2cErrToStr(ret));
            res = false;
        }
    }

    return res;
}

bool i2c_send_signal(uint8_t num, I2cSignal_t signal) {
    bool res = false;
    I2cHandle_t* Node = I2cGetNode(num);
    if(Node) {
        LOG_INFO(I2C, "I2C%u,Signal:%u=%s", num, signal, I2cSignalToStr(signal));
        if(Node->I2Cx) {
            switch((uint8_t)signal) {
            case I2C_START: {
                i2c_start_generate(Node->I2Cx);
                res = true;

            } break;

            case I2C_STOP: {
                i2c_stop_generate(Node->I2Cx);
                res = true;
            } break;

            default: {
                LOG_ERROR(I2C, "SignalErr:%u", signal);
                res = false;
            } break;
            }
        } else {
            LOG_ERROR(I2C, "%u,Instance,Err", num);
        }
    } else {
        LOG_ERROR(I2C, "%u NodeErr", num);
    }

    return res;
}

bool i2c_api_read_byte(uint8_t num, uint8_t chip_addr, uint8_t addr, uint8_t* value) {
    bool res = false;
    LOG_DEBUG(I2C, "I2C%u,Read,Chip:0x%02x,Reg:0x%02x", num, chip_addr, addr);
    I2cHandle_t* Node = I2cGetNode(num);
    if(Node) {
        i2c_interrupt_enable(Node->I2Cx, I2C_ALL_INT, TRUE);
        uint8_t effective_addr = i2c_compose_read_address(chip_addr);
        i2c_status_type ret = 0;
        ret = i2c_memory_read_int(&Node->i2c_h, I2C_MEM_ADDR_WIDIH_8, effective_addr, addr, value, 1,
                                  I2C_READ_TIME_OUT_MS);
        if(I2C_OK == ret) {
            time_delay_ms(64); /*4 - ok 8 32  err*/
            res = true;
        } else {
            LOG_ERROR(I2C, "Read,Reg,Err,Ret:%u=%s", ret, I2cErrToStr(ret));
            res = false;
        }
    }

    return res;
}

static bool i2c_at32f413_check_addr(uint8_t num, uint8_t i2c_addr) {
    bool res = false;
    I2cHandle_t* Node = I2cGetNode(num);
    if(Node) {
        uint32_t start = 0;
        uint32_t diff = 0;
        flag_status ret = 0;
        i2c_master_receive_ack_set(Node->I2Cx, I2C_MASTER_ACK_NEXT);
        i2c_ack_enable(Node->I2Cx, TRUE);
        res = true;
        Node->ack_done = false;
        Node->ack_fail = false;
        i2c_start_generate(Node->I2Cx);
        start = time_get_ms32();
        while(1) {
            ret = i2c_flag_get(Node->I2Cx, I2C_STARTF_FLAG);
            if(SET == ret) {
                break;
            }
            uint32_t cur = time_get_ms32();
            diff = cur - start;
            if(50 < diff) {
                res = false;
                break;
            }
        }

        Node->I2Cx->dt_bit.dt = i2c_addr;

        // i2c_7bit_address_send(Node->I2Cx, i2c_addr, I2C_DIRECTION_RECEIVE);

        start = time_get_ms32();

        while(1) {
            ret = i2c_flag_get(Node->I2Cx, I2C_ADDR7F_FLAG);
            if(SET == ret) {
                break;
            }
            uint32_t cur = time_get_ms32();
            diff = cur - start;
            if(50 < diff) {
                res = false;
                break;
            }
        }

        if(Node->ack_fail) {
            res = false;
            res = i2c_wait_ack_ll(Node, 50);
        }

        i2c_stop_generate(Node->I2Cx);

        start = time_get_ms32();
        while(1) {
            ret = i2c_flag_get(Node->I2Cx, I2C_STOPF_FLAG);
            if(SET == ret) {
                break;
            }
            uint32_t cur = time_get_ms32();
            diff = cur - start;
            if(50 < diff) {
                // res = false;
                break;
            }
        }
    }
    return res;
}

bool i2c_at32f43x_check_addr(uint8_t num, uint8_t i2c_addr) {
    bool res = false;
    I2cHandle_t* Node = I2cGetNode(num);
    if(Node) {
        i2c_interrupt_enable(Node->I2Cx, I2C_ALL_INT, TRUE);
        Node->ack_fail = false;
        i2c_status_type ret = I2C_OK;
        uint8_t buff[2] = {0};

        // i2c_transmit_set(Node->I2Cx, i2c_addr, 0, I2C_AUTO_STOP_MODE, I2C_GEN_START_READ  );
#if 0
        /*Does not works for SA51034HFA*/
        uint8_t wr_addr = i2c_compose_write_address(i2c_addr);
        ret = i2c_master_transmit_int(&Node->i2c_h, wr_addr, buff, (uint16_t)2, I2C_SEND_TIME_OUT_MS);
        if(I2C_OK == ret) {
            ret = i2c_wait_end(&Node->i2c_h, I2C_SEND_TIME_OUT_MS) ;
            if(I2C_OK == ret) {
            } else {
                LOG_DEBUG(I2C, "I2cTxErrRet:%u=%s", ret, I2cErrToStr(ret));

                res = true;
            }
                if(Node->ack_fail) {
                    res = false;
                } else {
                    res = true;
                }
                time_delay_ms(64); /* */
        }
#endif
        // ret = i2c_master_receive(&Node->i2c_h, i2c_addr, buff, 1, I2C_CHECK_TIMEOUT);
        // ret = i2c_master_transmit(&Node->i2c_h, i2c_addr, buff, 2, I2C_CHECK_TIMEOUT);
#if 1
        ret = i2c_master_receive_int(&Node->i2c_h, i2c_addr, buff, 1, I2C_TIMEOUT / 200000);
        if(I2C_OK == ret) {
            time_delay_ms(64); /*4 - ok 8 32  err*/
            if(Node->ack_fail) {
                res = false;
                Node->ack_fail = false;
            } else {
                res = true;
            }
        } else {
            LOG_DEBUG(I2C, "Read,Mem,Err,Ret:%u=%s", ret, I2cErrToStr(ret));
            res = false;
        }
#endif
    }
    return res;
}

bool i2c_check_addr(uint8_t num, uint8_t chip_addr) {
    bool res = false;
#ifdef HAS_AT32F413X
    res = i2c_at32f413_check_addr(num, chip_addr);
#endif

#ifdef HAS_AT32F43X
    res = i2c_at32f43x_check_addr(num, chip_addr);
#endif
    return res;
}

bool i2c_api_read_mem(uint8_t num, uint8_t chip_addr, uint8_t* const addr, size_t addr_size, uint8_t* const data,
                      size_t size) {
    bool res = false;
    I2cHandle_t* Node = I2cGetNode(num);
    if(Node) {
        i2c_interrupt_enable(Node->I2Cx, I2C_ALL_INT, TRUE);
        uint8_t chip_addr_eff = i2c_compose_read_address(chip_addr);
        i2c_status_type ret;
        i2c_mem_address_width_type mem_address_width;
        mem_address_width = AddrSizeToAddrWidth(addr_size);
        uint16_t mem_address = 0;

        switch(addr_size) {
        case 1: {
            U16_bit_t un16;
            un16.u16 = 0;
            uint8_t mem_address_u8 = 0;
            memcpy(&mem_address_u8, addr, 1);
            // un16.u8[1]=mem_address_u8; // zero on bus
            un16.u8[0] = mem_address_u8; // zero
            mem_address = un16.u16;
        } break;
        case 2: {
            uint16_t mem_address_u16 = 0;
            memcpy(&mem_address_u16, addr, 2);
            mem_address = (uint16_t)mem_address_u16;
        } break;
        }
        LOG_DEBUG(I2C, "ReadMem,Chip:0x%02x,Addr:0x%04x,Size:%u,AddrSZ:%u", chip_addr, mem_address, size, addr_size);
        // mem_address=reverse_byte_order_uint16(mem_address);
        ret = i2c_memory_read_int(&Node->i2c_h, mem_address_width, chip_addr_eff, mem_address, data, size,
                                  I2C_READ_TIME_OUT_MS);
#if 0
        ret = i2c_memory_read(&Node->i2c_h, mem_address_width, chip_addr_eff, mem_address, data, size,
                                  I2C_READ_TIME_OUT_MS);
#endif
        if(I2C_OK == ret) {
            time_delay_ms(1); // 2 10 25 50 ok
            res = true;
#ifdef HAS_AT32F43X
            if(Node->ack_fail) {
                res = false;
            } else {
                res = true;
            }
#endif
        } else {
            LOG_ERROR(I2C, "Read,Mem,Err,Ret:%u=%s", ret, I2cErrToStr(ret));
            i2c_init_one(num);
            i2c_stop_generate(Node->I2Cx);
            res = false;
        }
    }

    return res;
}
